--- a/package.json
+++ b/package.json
@@ -62,9 +62,22 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
+    "server": "nodemon server/server.js",
+    "dev": "concurrently \"nodemon server/server.js\" \"node scripts/start.js\"",
     "test": "node scripts/test.js"
   },
   "eslintConfig": {
+    "parserOptions": {
+      "babelOptions": {
+        "presets": [
+          [
+            "babel-preset-react-app",
+            false
+          ],
+          "babel-preset-react-app/prod"
+        ]
+      }
+    },
     "extends": [
       "react-app",
       "react-app/jest"
@@ -142,6 +155,9 @@
     "@babel/plugin-proposal-class-properties": "^7.17.12",
     "@babel/plugin-transform-runtime": "^7.18.5",
     "@babel/preset-env": "^7.18.2",
-    "@babel/runtime": "^7.18.3"
-  }
+    "@babel/runtime": "^7.18.3",
+    "concurrently": "^7.2.2",
+    "nodemon": "^2.0.16"
+  },
+  "proxy": "http://localhost:5000"
 }
