--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "query-string": "^7.1.1",
     "react": "^18.2.0",
     "react-app-polyfill": "^3.0.0",
+    "react-awesome-modal": "^2.0.5",
     "react-dev-utils": "^12.0.1",
     "react-dom": "^18.2.0",
     "react-refresh": "^0.11.0",
