--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "sass-loader": "^12.3.0",
     "semver": "^7.3.5",
     "sequelize": "^6.21.0",
+    "sha256": "^0.2.0",
     "source-map-loader": "^3.0.0",
     "style-loader": "^3.3.1",
     "tailwindcss": "^3.0.2",
