--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "jest-resolve": "^27.4.2",
     "jest-watch-typeahead": "^1.0.0",
     "mini-css-extract-plugin": "^2.4.5",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.34",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "path": "^0.12.7",
