nodemailer 사용해 이메일 인증코드 전송 기능 구현

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "moment-timezone": "^0.5.34",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
+    "nodemailer": "^6.7.8",
     "path": "^0.12.7",
     "postcss": "^8.4.4",
     "postcss-flexbugs-fixes": "^5.0.2",
