--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express": "^4.18.1",
     "file-loader": "^6.2.0",
     "fs-extra": "^10.0.0",
+    "history": "^5.3.0",
     "html-webpack-plugin": "^5.5.0",
     "identity-obj-proxy": "^3.0.0",
     "ip": "^1.1.8",
@@ -59,8 +60,11 @@
     "react-awesome-modal": "^2.0.5",
     "react-dev-utils": "^12.0.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
+    "react-query": "^3.39.2",
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.3.0",
+    "recoil": "^0.7.5",
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
     "sass-loader": "^12.3.0",
@@ -69,6 +73,7 @@
     "sha256": "^0.2.0",
     "source-map-loader": "^3.0.0",
     "style-loader": "^3.3.1",
+    "styled-components": "^5.3.5",
     "tailwindcss": "^3.0.2",
     "terser-webpack-plugin": "^5.2.5",
     "web-vitals": "^2.1.0",
