--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "sass-loader": "^12.3.0",
     "semver": "^7.3.5",
     "sequelize": "^6.21.0",
+    "serve": "^14.0.1",
     "sha256": "^0.2.0",
     "source-map-loader": "^3.0.0",
     "style-loader": "^3.3.1",
