--- a/package.json
+++ b/package.json
@@ -85,8 +85,8 @@
     "yarn": "^1.22.19"
   },
   "scripts": {
-    "start": "react-scripts --max_old_space_size=4096 start",
-    "build": "react-scripts --max_old_space_size=4096 build",
+    "start": "node scripts/start.js",
+    "build": "node scripts/build.js",
     "server": "nodemon server/server.js",
     "dev": "concurrently \"nodemon server/server.js\" \"node scripts/start.js\"",
     "test": "node scripts/test.js"
