--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
-    "aws-sdk": "^2.1166.0",
+    "aws-sdk": "^2.1218.0",
     "axios": "^0.27.2",
     "babel-jest": "^27.4.2",
     "babel-loader": "^8.2.5",
@@ -44,10 +44,12 @@
     "mini-css-extract-plugin": "^2.4.5",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.34",
+    "multer-s3": "^3.0.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "nodemailer": "^6.7.8",
     "path": "^0.12.7",
+    "pm2": "^5.2.0",
     "postcss": "^8.4.4",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-loader": "^6.2.1",
@@ -61,6 +63,7 @@
     "react-dev-utils": "^12.0.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-loading": "^2.0.3",
     "react-query": "^3.39.2",
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.3.0",
